--- a/style.css
+++ b/style.css
@@ -13,12 +13,17 @@
   font-family: 'Alegreya Sans', sans-serif;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5 {
   font-family: 'DM Serif Display', serif;
+} */
+
+body {
+  margin-left: 1rem;
+  margin-top: 1rem;
 }
 
 #logo {
@@ -30,8 +35,8 @@ h5 {
 .header-container {
   display: flex;
   align-items: center;
-  margin-top: 0.5rem;
-  margin-left: 1rem;
+  /* margin-top: 1rem;
+  margin-left: 1rem; */
 }
 
 header h1 {
@@ -51,8 +56,8 @@ header p {
 }
 
 #main {
-  margin-left: 2rem;
-  margin-top: 1.5rem;
+  margin-left: 3rem;
+  margin-top: 0.5rem;
 }
 
 #main > ul {
@@ -73,14 +78,14 @@ header p {
 }
 
 #main > ul > li::after {
-  background: none repeat scroll 0 0 transparent;
+  /* background: none repeat scroll 0 0 transparent; */
   bottom: 0;
   content: '';
   height: 15px;
   left: 0;
   position: absolute;
   background: var(--blue);
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  transition: width 0.4s ease 0s, left 0.3s ease 0s;
   width: 0;
   z-index: -1;
 }
@@ -89,7 +94,7 @@ header p {
   left: 0;
 }
 
-#main > ul > li .link.active {
+#main > .link.active {
   bottom: 0;
   content: '';
   height: 15px;
@@ -98,8 +103,9 @@ header p {
   background: var(--blue);
   /* transition: width 0.3s ease 0s, left 0.3s ease 0s; */
   width: 120%;
-  z-index: 0;
+  z-index: -1;
 }
+
 .skills-list {
   display: flex;
 }
