--- a/style.css
+++ b/style.css
@@ -13,13 +13,9 @@
   font-family: 'Alegreya Sans', sans-serif;
 }
 
-/* h1,
-h2,
-h3,
-h4,
-h5 {
+h1 {
   font-family: 'DM Serif Display', serif;
-} */
+}
 
 body {
   margin-left: 1rem;
