--- a/style.css
+++ b/style.css
@@ -13,10 +13,6 @@
   font-family: 'Alegreya Sans', sans-serif;
 }
 
-h1 {
-  font-family: 'DM Serif Display', serif;
-}
-
 body {
   margin-left: 1rem;
   margin-top: 1rem;
@@ -39,6 +35,7 @@ header h1 {
   letter-spacing: 0.1rem;
   margin-bottom: -8px;
   font-size: 3rem;
+  font-family: 'DM Serif Display', serif;
 }
 
 header p {
@@ -73,7 +70,7 @@ header p {
   color: #000;
 }
 
-#main > ul > li::after {
+#main > ul > li.link::after {
   /* background: none repeat scroll 0 0 transparent; */
   bottom: 0;
   content: '';
@@ -85,20 +82,21 @@ header p {
   width: 0;
   z-index: -1;
 }
-#main > ul > li:hover::after {
+#main > ul > li.link:hover::after {
   width: 120%;
   left: 0;
+  transition: width 0.7s ease 0s, left 0.3s ease 0s;
 }
 
-#main > .link.active {
+#main > ul > li.active::after {
   bottom: 0;
   content: '';
   height: 15px;
   left: 0;
   position: absolute;
   background: var(--blue);
-  /* transition: width 0.3s ease 0s, left 0.3s ease 0s; */
-  width: 120%;
+  transition: width 0.7s ease 0s, left 0.3s ease 0s;
+  width: 600px;
   z-index: -1;
 }
 
@@ -115,15 +113,17 @@ header p {
   font-size: inherit;
 }
 
-.content {
+#main > ul > div.content {
   display: none;
-  -webkit-transition: display 2s;
-  -moz-transition: display 2s;
-  transition: display 2s;
+  visibility: hidden;
+  -webkit-transition: visibility 2s;
+  -moz-transition: visibility 2s;
+  transition: visibility 2s;
 }
 
-.content.active {
+#main > ul > div.content.active {
   display: block;
+  visibility: visible;
 }
 
 div.card {
