--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header p {
 #main > ul > li.link:hover::after {
   width: 120%;
   left: 0;
-  transition: width 0.7s ease 0s, left 0.3s ease 0s;
+  transition: width 0.6s ease 0s, left 0.3s ease 0s;
 }
 
 #main > ul > li.active::after {
@@ -95,7 +95,7 @@ header p {
   left: 0;
   position: absolute;
   background: var(--blue);
-  transition: width 0.7s ease 0s, left 0.3s ease 0s;
+  transition: width 0.6s ease 0s, left 0.3s ease 0s;
   width: 600px;
   z-index: -1;
 }
@@ -114,16 +114,25 @@ header p {
 }
 
 #main > ul > div.content {
-  display: none;
+  /* display: none; */
+  height: 0;
   visibility: hidden;
-  -webkit-transition: visibility 2s;
-  -moz-transition: visibility 2s;
-  transition: visibility 2s;
+  opacity: 0;
+  width: 600px;
+  max-width: 100vw;
+  padding: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  transition: all o.5s;
 }
 
 #main > ul > div.content.active {
-  display: block;
+  /* display: block; */
+
+  height: 200px;
   visibility: visible;
+  opacity: 100%;
+  transition: height 0.5s;
 }
 
 div.card {
