--- a/style.css
+++ b/style.css
@@ -78,14 +78,16 @@ header p {
   left: 0;
   position: absolute;
   background: var(--blue);
-  transition: width 0.4s ease 0s, left 0.3s ease 0s;
-  width: 0;
+  /* transition: width 0.4s ease 0s, left 0.3s ease 0s; */
+  /* width: 0; */
   z-index: -1;
 }
+
 #main > ul > li.link:hover::after {
-  width: 120%;
+  width: 300px;
   left: 0;
-  transition: width 0.6s ease 0s, left 0.3s ease 0s;
+  /* transition: width 0.6s ease 0s, left 0.3s ease 0s; */
+  transition: width 0.6s;
 }
 
 #main > ul > li.active::after {
@@ -123,15 +125,26 @@ header p {
   padding: 0;
   margin-right: 0;
   margin-bottom: 0;
-  transition: all o.5s;
+  transition: all 0.5s;
 }
 
 #main > ul > div.content.active {
-  /* display: block; */
-
-  height: 200px;
   visibility: visible;
   opacity: 100%;
+  margin-top: 1rem;
+  transition: width 0.6s;
+}
+
+#main > ul > div.content.active:nth-of-type(1) {
+  height: 280px;
+  transition: height 0.5s;
+}
+#main > ul > div.content.active:nth-of-type(2) {
+  height: 120px;
+  transition: height 0.5s;
+}
+#main > ul > div.content.active:nth-of-type(3) {
+  height: 100px;
   transition: height 0.5s;
 }
 
@@ -143,4 +156,14 @@ div.card {
   margin-bottom: 1.5rem;
   /* border-radius: 6px; */
   /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.2); */
+}
+
+.projects {
+  display: flex;
+}
+
+.project {
+  flex: 1 0 50%;
+  margin-left: 0.5rem;
+  padding: 0.5rem;
 }
