--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap');
 
 :root {
-  --blue: #5aaab7;
+  --blue: #9bd3db;
 }
 
 * {
@@ -40,8 +40,9 @@ header h1 {
 
 header p {
   text-transform: uppercase;
+  font-weight: bold;
   color: var(--blue);
-  letter-spacing: 0.25rem;
+  letter-spacing: 1.2rem;
 }
 
 .name {
@@ -55,6 +56,7 @@ header p {
 
 #main > ul {
   list-style: none;
+  width: 600px;
 }
 
 #main > ul > li {
@@ -115,12 +117,17 @@ header p {
   font-size: inherit;
 }
 
+.education ul {
+  margin-right: 2rem;
+  list-style: none;
+}
+
 #main > ul > div.content {
   /* display: none; */
   height: 0;
   visibility: hidden;
   opacity: 0;
-  width: 600px;
+
   max-width: 100vw;
   padding: 0;
   margin-right: 0;
@@ -144,7 +151,11 @@ header p {
   transition: height 0.5s;
 }
 #main > ul > div.content.active:nth-of-type(3) {
-  height: 100px;
+  height: 350px;
+  transition: height 0.5s;
+}
+#main > ul > div.content.active:nth-of-type(4) {
+  height: 350px;
   transition: height 0.5s;
 }
 
@@ -160,10 +171,18 @@ div.card {
 
 .projects {
   display: flex;
+  flex-direction: column;
 }
 
 .project {
   flex: 1 0 50%;
-  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
   padding: 0.5rem;
+}
+
+.icon {
+  color: var(--blue);
+  padding: 0.3rem;
+  margin-top: 0.3rem;
 }
