--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ header p {
 }
 
 #main > ul > li {
-  width: fit-content;
   display: block;
   font-family: 'DM Serif Display', serif;
   font-size: 1.5rem;
@@ -100,7 +99,7 @@ header p {
   position: absolute;
   background: var(--blue);
   transition: width 0.6s ease 0s, left 0.3s ease 0s;
-  width: 600px;
+  width: 100%;
   z-index: -1;
 }
 
@@ -124,39 +123,23 @@ header p {
 
 #main > ul > div.content {
   /* display: none; */
-  height: 0;
+  max-height: 0;
   visibility: hidden;
   opacity: 0;
-
   max-width: 100vw;
   padding: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-  transition: all 0.5s;
+  margin: 0;
+  transition: all 0.8s;
 }
 
 #main > ul > div.content.active {
   visibility: visible;
   opacity: 100%;
   margin-top: 1rem;
-  transition: width 0.6s;
-}
-
-#main > ul > div.content.active:nth-of-type(1) {
-  height: 280px;
-  transition: height 0.5s;
-}
-#main > ul > div.content.active:nth-of-type(2) {
-  height: 120px;
-  transition: height 0.5s;
-}
-#main > ul > div.content.active:nth-of-type(3) {
-  height: 350px;
-  transition: height 0.5s;
-}
-#main > ul > div.content.active:nth-of-type(4) {
-  height: 350px;
-  transition: height 0.5s;
+  max-width: 100vw;
+  max-height: 30em;
+  transition: max-height 0.8s ease-in-out, width 0.8s cubic-bezier(0, 1, 0, 1);
+  margin-bottom: 1rem;
 }
 
 div.card {
@@ -185,4 +168,13 @@ div.card {
   color: var(--blue);
   padding: 0.3rem;
   margin-top: 0.3rem;
+}
+
+@media only screen and (max-width: 600px) {
+  ul {
+    width: 100vw;
+  }
+  #main > ul > div.content.active {
+    width: 400px;
+  }
 }
