--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ header p {
   max-width: 100vw;
   padding: 0;
   margin: 0;
-  transition: all 0.8s;
+  transition: all 0.8s ease-in-out;
 }
 
 #main > ul > div.content.active {
@@ -164,7 +164,7 @@ div.card {
   padding: 0.5rem;
 }
 
-.icon {
+i {
   color: var(--blue);
   padding: 0.3rem;
   margin-top: 0.3rem;
